kubernetes/dotnetmvcsvc-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  annotations:
    kompose.cmd: kompose convert -o kubernetes
    kompose.version: 1.26.1 (HEAD)
  creationTimestamp: null
  labels:
    io.kompose.service: dotnetmvcsvc
  name: dotnetmvcsvc
spec:
  replicas: 1
  selector:
    matchLabels:
      io.kompose.service: dotnetmvcsvc
  strategy: {}
  template:
    metadata:
      annotations:
        kompose.cmd: kompose convert -o kubernetes
        kompose.version: 1.26.1 (HEAD)
      creationTimestamp: null
      labels:
        io.kompose.service: dotnetmvcsvc
    spec:
      containers:
        - image: dotnetmvcsvc:v0
          name: dotnetmvcsvc
          ports:
            - containerPort: 8007
          resources: {}
      restartPolicy: Always
status: {}
