kubernetes/dotnetwebsvc-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  annotations:
    kompose.cmd: kompose convert -o kubernetes
    kompose.version: 1.26.1 (HEAD)
  creationTimestamp: null
  labels:
    io.kompose.service: dotnetwebsvc
  name: dotnetwebsvc
spec:
  replicas: 1
  selector:
    matchLabels:
      io.kompose.service: dotnetwebsvc
  strategy: {}
  template:
    metadata:
      annotations:
        kompose.cmd: kompose convert -o kubernetes
        kompose.version: 1.26.1 (HEAD)
      creationTimestamp: null
      labels:
        io.kompose.service: dotnetwebsvc
    spec:
      containers:
        - image: dotnetwebsvc:v0
          name: dotnetwebsvc
          ports:
            - containerPort: 80
          resources: {}
      restartPolicy: Always
status: {}
