kubernetes/ionicsvc-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  annotations:
    kompose.cmd: kompose convert -o kubernetes
    kompose.service.type: LoadBalancer
    kompose.version: 1.26.1 (HEAD)
  creationTimestamp: null
  labels:
    io.kompose.service: ionicsvc
  name: ionicsvc
spec:
  replicas: 1
  selector:
    matchLabels:
      io.kompose.service: ionicsvc
  strategy: {}
  template:
    metadata:
      annotations:
        kompose.cmd: kompose convert -o kubernetes
        kompose.service.type: LoadBalancer
        kompose.version: 1.26.1 (HEAD)
      creationTimestamp: null
      labels:
        io.kompose.service: ionicsvc
    spec:
      containers:
        - image: ionicsvc:v0
          name: ionicsvc
          ports:
            - containerPort: 80
          resources: {}
      restartPolicy: Always
status: {}
