kubernetes/javasvc-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  annotations:
    kompose.cmd: kompose convert -o kubernetes
    kompose.version: 1.26.1 (HEAD)
  creationTimestamp: null
  labels:
    io.kompose.service: javasvc
  name: javasvc
spec:
  replicas: 1
  selector:
    matchLabels:
      io.kompose.service: javasvc
  strategy: {}
  template:
    metadata:
      annotations:
        kompose.cmd: kompose convert -o kubernetes
        kompose.version: 1.26.1 (HEAD)
      creationTimestamp: null
      labels:
        io.kompose.service: javasvc
    spec:
      containers:
        - image: javasvc:v0
          name: javasvc
          ports:
            - containerPort: 8080
          resources: {}
      restartPolicy: Always
status: {}
