kubernetes/mysqlsvc-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  annotations:
    kompose.cmd: kompose convert -o kubernetes
    kompose.version: 1.26.1 (HEAD)
  creationTimestamp: null
  labels:
    io.kompose.service: mysqlsvc
  name: mysqlsvc
spec:
  replicas: 1
  selector:
    matchLabels:
      io.kompose.service: mysqlsvc
  strategy: {}
  template:
    metadata:
      annotations:
        kompose.cmd: kompose convert -o kubernetes
        kompose.version: 1.26.1 (HEAD)
      creationTimestamp: null
      labels:
        io.kompose.service: mysqlsvc
    spec:
      containers:
        - env:
            - name: MYSQL_ROOT_PASSWORD
              value: password
          image: mysqlsvc:v0
          name: mysqlsvc
          ports:
            - containerPort: 3306
          resources: {}
      restartPolicy: Always
status: {}
