kubernetes/nodesvc-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  annotations:
    kompose.cmd: kompose convert -o kubernetes
    kompose.version: 1.26.1 (HEAD)
  creationTimestamp: null
  labels:
    io.kompose.service: nodesvc
  name: nodesvc
spec:
  replicas: 1
  selector:
    matchLabels:
      io.kompose.service: nodesvc
  strategy: {}
  template:
    metadata:
      annotations:
        kompose.cmd: kompose convert -o kubernetes
        kompose.version: 1.26.1 (HEAD)
      creationTimestamp: null
      labels:
        io.kompose.service: nodesvc
    spec:
      containers:
        - image: nodesvc:v0
          name: nodesvc
          ports:
            - containerPort: 8001
          resources: {}
      restartPolicy: Always
status: {}
