kubernetes/phpsymfonysvc-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  annotations:
    kompose.cmd: kompose convert -o kubernetes
    kompose.version: 1.26.1 (HEAD)
  creationTimestamp: null
  labels:
    io.kompose.service: phpsymfonysvc
  name: phpsymfonysvc
spec:
  replicas: 1
  selector:
    matchLabels:
      io.kompose.service: phpsymfonysvc
  strategy: {}
  template:
    metadata:
      annotations:
        kompose.cmd: kompose convert -o kubernetes
        kompose.version: 1.26.1 (HEAD)
      creationTimestamp: null
      labels:
        io.kompose.service: phpsymfonysvc
    spec:
      containers:
        - image: phpsymfonysvc:v0
          name: phpsymfonysvc
          ports:
            - containerPort: 8010
          resources: {}
      restartPolicy: Always
status: {}
