kubernetes/phpwebsvc-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  annotations:
    kompose.cmd: kompose convert -o kubernetes
    kompose.version: 1.26.1 (HEAD)
  creationTimestamp: null
  labels:
    io.kompose.service: phpwebsvc
  name: phpwebsvc
spec:
  replicas: 1
  selector:
    matchLabels:
      io.kompose.service: phpwebsvc
  strategy: {}
  template:
    metadata:
      annotations:
        kompose.cmd: kompose convert -o kubernetes
        kompose.version: 1.26.1 (HEAD)
      creationTimestamp: null
      labels:
        io.kompose.service: phpwebsvc
    spec:
      containers:
        - image: phpwebsvc:v0
          name: phpwebsvc
          ports:
            - containerPort: 8008
          resources: {}
      restartPolicy: Always
status: {}
