kubernetes/pythondjangosvc-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  annotations:
    kompose.cmd: kompose convert -o kubernetes
    kompose.version: 1.26.1 (HEAD)
  creationTimestamp: null
  labels:
    io.kompose.service: pythondjangosvc
  name: pythondjangosvc
spec:
  replicas: 1
  selector:
    matchLabels:
      io.kompose.service: pythondjangosvc
  strategy: {}
  template:
    metadata:
      annotations:
        kompose.cmd: kompose convert -o kubernetes
        kompose.version: 1.26.1 (HEAD)
      creationTimestamp: null
      labels:
        io.kompose.service: pythondjangosvc
    spec:
      containers:
        - image: pythondjangosvc:v0
          name: pythondjangosvc
          ports:
            - containerPort: 8000
          resources: {}
      restartPolicy: Always
status: {}
