kubernetes/pythonflasksvc-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  annotations:
    kompose.cmd: kompose convert -o kubernetes
    kompose.version: 1.26.1 (HEAD)
  creationTimestamp: null
  labels:
    io.kompose.service: pythonflasksvc
  name: pythonflasksvc
spec:
  replicas: 1
  selector:
    matchLabels:
      io.kompose.service: pythonflasksvc
  strategy: {}
  template:
    metadata:
      annotations:
        kompose.cmd: kompose convert -o kubernetes
        kompose.version: 1.26.1 (HEAD)
      creationTimestamp: null
      labels:
        io.kompose.service: pythonflasksvc
    spec:
      containers:
        - image: pythonflasksvc:v0
          name: pythonflasksvc
          ports:
            - containerPort: 5000
          resources: {}
      restartPolicy: Always
status: {}
