kubernetes/dotnetmvcsvc-service.yaml
apiVersion: v1
kind: Service
metadata:
  annotations:
    kompose.cmd: kompose convert -o kubernetes
    kompose.version: 1.26.1 (HEAD)
  creationTimestamp: null
  labels:
    io.kompose.service: dotnetmvcsvc
  name: dotnetmvcsvc
spec:
  ports:
    - name: "8007"
      port: 8007
      targetPort: 8007
  selector:
    io.kompose.service: dotnetmvcsvc
status:
  loadBalancer: {}
