kubernetes/dotnetwebsvc-service.yaml
apiVersion: v1
kind: Service
metadata:
  annotations:
    kompose.cmd: kompose convert -o kubernetes
    kompose.version: 1.26.1 (HEAD)
  creationTimestamp: null
  labels:
    io.kompose.service: dotnetwebsvc
  name: dotnetwebsvc
spec:
  ports:
    - name: "8006"
      port: 8006
      targetPort: 80
  selector:
    io.kompose.service: dotnetwebsvc
status:
  loadBalancer: {}
