kubernetes/ionicsvc-tcp-service.yaml
apiVersion: v1
kind: Service
metadata:
  annotations:
    kompose.cmd: kompose convert -o kubernetes
    kompose.service.type: LoadBalancer
    kompose.version: 1.26.1 (HEAD)
  creationTimestamp: null
  labels:
    io.kompose.service: ionicsvc-tcp
  name: ionicsvc-tcp
spec:
  ports:
    - name: "8080"
      port: 8080
      targetPort: 80
  selector:
    io.kompose.service: ionicsvc
  type: LoadBalancer
status:
  loadBalancer: {}
