kubernetes/javasvc-service.yaml
apiVersion: v1
kind: Service
metadata:
  annotations:
    kompose.cmd: kompose convert -o kubernetes
    kompose.version: 1.26.1 (HEAD)
  creationTimestamp: null
  labels:
    io.kompose.service: javasvc
  name: javasvc
spec:
  ports:
    - name: "8002"
      port: 8002
      targetPort: 8080
  selector:
    io.kompose.service: javasvc
status:
  loadBalancer: {}
