kubernetes/meilisearch-service.yaml
apiVersion: v1
kind: Service
metadata:
  annotations:
    kompose.cmd: kompose convert -o kubernetes
    kompose.version: 1.26.1 (HEAD)
  creationTimestamp: null
  labels:
    io.kompose.service: meilisearch
  name: meilisearch
spec:
  ports:
    - name: "7700"
      port: 7700
      targetPort: 7700
  selector:
    io.kompose.service: meilisearch
status:
  loadBalancer: {}
