kubernetes/phplaravel9svc-service.yaml
apiVersion: v1
kind: Service
metadata:
  annotations:
    kompose.cmd: kompose convert -o kubernetes
    kompose.version: 1.26.1 (HEAD)
  creationTimestamp: null
  labels:
    io.kompose.service: phplaravel9svc
  name: phplaravel9svc
spec:
  ports:
    - name: "8009"
      port: 8009
      targetPort: 8009
  selector:
    io.kompose.service: phplaravel9svc
status:
  loadBalancer: {}
