kubernetes/phpsymfonysvc-service.yaml
apiVersion: v1
kind: Service
metadata:
  annotations:
    kompose.cmd: kompose convert -o kubernetes
    kompose.version: 1.26.1 (HEAD)
  creationTimestamp: null
  labels:
    io.kompose.service: phpsymfonysvc
  name: phpsymfonysvc
spec:
  ports:
    - name: "8010"
      port: 8010
      targetPort: 8010
  selector:
    io.kompose.service: phpsymfonysvc
status:
  loadBalancer: {}
