kubernetes/pythonflasksvc-service.yaml
apiVersion: v1
kind: Service
metadata:
  annotations:
    kompose.cmd: kompose convert -o kubernetes
    kompose.version: 1.26.1 (HEAD)
  creationTimestamp: null
  labels:
    io.kompose.service: pythonflasksvc
  name: pythonflasksvc
spec:
  ports:
    - name: "8003"
      port: 8003
      targetPort: 5000
  selector:
    io.kompose.service: pythonflasksvc
status:
  loadBalancer: {}
