kubernetes/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: api-gateway
  annotations:
    kubernetes.io/ingress.class: nginx
    nginx.ingress.kubernetes.io/rewrite-target: /$2
    nginx.ingress.kubernetes.io/use-regex: "true"
spec:
  rules:
    - host: localstack
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: localstack
                port:
                  number: 8002
    - host: localhost
      http:
        paths:
          - path: /javasvc(/|$)(.*)
            pathType: Prefix
            backend:
              service:
                name: javasvc
                port:
                  number: 8002
          - path: /gosvc(/|$)(.*)
            pathType: Prefix
            backend:
              service:
                name: gosvc
                port:
                  number: 8000
          - path: /nodesvc(/|$)(.*)
            pathType: Prefix
            backend:
              service:
                name: nodesvc
                port:
                  number: 8001
          - path: /pythonflasksvc(/|$)(.*)
            pathType: Prefix
            backend:
              service:
                name: pythonflasksvc
                port:
                  number: 8003
          - path: /pythonhttpsvc(/|$)(.*)
            pathType: Prefix
            backend:
              service:
                name: pythonhttpsvc
                port:
                  number: 8004
          - path: /pythondjangosvc(/|$)(.*)
            pathType: Prefix
            backend:
              service:
                name: pythondjangosvc
                port:
                  number: 8005
          - path: /dotnetwebsvc(/|$)(.*)
            pathType: Prefix
            backend:
              service:
                name: dotnetwebsvc
                port:
                  number: 8006
          - path: /dotnetmvcsvc(/|$)(.*)
            pathType: Prefix
            backend:
              service:
                name: dotnetmvcsvc
                port:
                  number: 8007
          - path: /phpwebsvc(/|$)(.*)
            pathType: Prefix
            backend:
              service:
                name: phpwebsvc
                port:
                  number: 8008
          - path: /phplaravel9svc(/|$)(.*)
            pathType: Prefix
            backend:
              service:
                name: phplaravel9svc
                port:
                  number: 8009
          - path: /phpsymfonysvc(/|$)(.*)
            pathType: Prefix
            backend:
              service:
                name: phpsymfonysvc
                port:
                  number: 8010
          - path: /phpsymfonywebsvc(/|$)(.*)
            pathType: Prefix
            backend:
              service:
                name: phpsymfonywebsvc
                port:
                  number: 8011
          - path: /ionicsvc(/|$)(.*)
            pathType: Prefix
            backend:
              service:
                name: ionicsvc
                port:
                  number: 8080
#          - path: /
#            #TODO: make this serve client files
#            pathType: Prefix
#            backend:
#              service:
#                name: ionicsvc
#                port:
#                  number: 8080
